--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@ pom.xml.asc
 .lein-failures
 .nrepl-port
 .cpcache/
+
+# Created by https://www.gitignore.io/api/jekyll
+# Edit at https://www.gitignore.io/?templates=jekyll
+
+### Jekyll ###
+**/_site/
+**/.sass-cache/
+**/.jekyll-cache/
+**/.jekyll-metadata
+
+# End of https://www.gitignore.io/api/jekyll
